# archsafe

./: .env.example  README.md  pyproject.toml
archsafe/: __init__.py  ai_explainer.py  aur_checker.py  config_manager.py  main.py  models.py  pkgbuild_analyzer.py  risk_engine.py  update_checker.py  utils.py
